--- a/src/components/firstnavbar/mobilenavbar.css
+++ b/src/components/firstnavbar/mobilenavbar.css
@@ -1,91 +1,93 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-.stl {
-   margin-top: 30px;
-   display: flex;
-   justify-content: space-between;
- }
- 
- .icn-hm {
-   margin-left: 20px;
-   width: 34px;
-   height: 34px;
-   margin-bottom: 13px;
- }
- 
- .logo-mobl {
-   display: flex;
-   width: 141px;
-   height: 30px;
- }
- 
- .cart-container {
-   position: relative; 
- }
- 
- .icn-7 {
-   margin-right: 30px;
-   position: relative;
- }
- 
- .roundedd-2 {
-   position: absolute;
-   top: -3px; 
-   right: 8px; 
-   width: 18px;
-   height: 18px;
-   padding: 1px 5.39px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   border-radius: 9999px;
-   background: #ED2727;
-   color: #fff;
- }
- .search-container {
-   position: relative;
-   width: 100%; 
-   display: flex;
-   align-items: center;
- }
- 
- .search-icon {
-   position: absolute;
-   left: 10px;
-   width: 20px;
-   height: 20px;
-   margin-right: 6px;
- }
- 
- .mbl-input {
-   width: 100%; 
-   padding: 9px 32px;
-   height: 36px;
-   border-radius: 24px;
-   justify-content: center;
-   align-items: center;
-   flex-shrink: 0;
-   box-sizing: border-box;
-   background: #F3F3F3;
- }
- .tyr-7{
-  display: inline-block; 
-  float: right; 
-  margin-left: auto; 
-  margin-right: 16px;
- }
-.kuu{
-  color: #000;
-text-transform: uppercase;
-font-family: Inter;
-font-size: 16.172px;
-font-style: normal;
-font-weight: 600;
-line-height: 40px; 
-margin-left: 20px !important;
 
+.stl {
+  margin-top: 30px;
+  display: flex;
+  justify-content: space-between;
 }
+
+.icn-hm {
+  margin-left: 20px;
+  width: 34px;
+  height: 34px;
+  margin-bottom: 13px;
+}
+
+.logo-mobl {
+  display: flex;
+  width: 141px;
+  height: 30px;
+}
+
+.cart-container {
+  position: relative;
+}
+
+.icn-7 {
+  margin-right: 30px;
+  position: relative;
+}
+
+.roundedd-2 {
+  position: absolute;
+  top: -3px;
+  right: 8px;
+  width: 18px;
+  height: 18px;
+  padding: 1px 5.39px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 9999px;
+  background: #ED2727;
+  color: #fff;
+}
+
+.search-container {
+  position: relative;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+.search-icon {
+  position: absolute;
+  left: 10px;
+  width: 20px;
+  height: 20px;
+  margin-right: 6px;
+}
+
+.mbl-input {
+  width: 100%;
+  padding: 9px 32px;
+  height: 36px;
+  border-radius: 24px;
+  justify-content: center;
+  align-items: center;
+  flex-shrink: 0;
+  box-sizing: border-box;
+  background: #F3F3F3;
+}
+
+.tyr-7 {
+  float: right;
+  margin-left: auto;
+  margin-right: 16px;
+}
+
+.kuu {
+  text-transform: uppercase;
+  font-family: Inter;
+  font-size: 16.172px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 40px;
+  margin-left: 20px !important;
+}
+
 .kuu li {
-  color: #000 !important;
+  color: #fff !important;
   font-family: Inter, sans-serif !important;
   font-size: 16.172px !important;
   font-style: normal !important;
@@ -93,44 +95,47 @@ margin-left: 20px !important;
   line-height: 40px !important;
   text-transform: uppercase;
 }
-.alt-5{
-  background: #E5E5E5;
+
+.alt-5 {
+  background: #1e1e1e;
   display: flex;
-height: 442px;
-padding: 7.5px 157.32px 314.5px 16px;
-flex-direction: column;
-padding: 0 !important;
-margin: 0 ;
-box-sizing: border-box;
-width: 100%;
-   padding-left: 20px !important;
+  height: 442px;
+  flex-direction: column;
+  padding: 0 !important;
+  margin: 0;
+  box-sizing: border-box;
+  width: 100%;
+  padding-left: 20px !important;
 
 }
+
 .mantine-Drawer-content {
   padding: 0 !important;
+  background-color: #000 !important;
 }
 
 .mantine-Drawer-body {
-  padding: 0 !important; 
+  padding: 0 !important;
+  background-color: #000 !important;
 }
 
 .alt-5 {
-  
   padding-top: 15px !important;
-  background: #E5E5E5; 
-  width: 100%; 
-  
+  background: #1e1e1e !important;
+  width: 100%;
 }
-.alt-5 ul li{
-  color: #000 !important;
-font-family: Inter !important;
-font-size: 13.75px !important;
-font-style: normal !important;
-font-weight: 500 !important;
-line-height: 40px !important;
+
+.alt-5 ul li {
+  color: #fff !important;
+  font-family: Inter !important;
+  font-size: 13.75px !important;
+  font-style: normal !important;
+  font-weight: 500 !important;
+  line-height: 40px !important;
 }
+
 .alt-5 ul li.mtt {
-  color: #000 !important;
+  color: #fff !important;
   font-family: Inter !important;
   font-size: 13.75px !important;
   font-style: normal !important;
@@ -138,18 +143,19 @@ line-height: 40px !important;
   line-height: 40px !important;
   margin-top: 20px !important;
 }
- @media (min-width: 600px) {
-   .stl {
-     display: none;
-   }
- }
- @media (min-width: 600px){
-   .mbl-input{
-      display: none;
-   }
-   .search-icon{
-      display: none;
-   }
- }
- 
 
+@media (min-width: 600px) {
+  .stl {
+    display: none;
+  }
+}
+
+@media (min-width: 600px) {
+  .mbl-input {
+    display: none;
+  }
+
+  .search-icon {
+    display: none;
+  }
+}
